Prevent breaking the element into a new line on smaller screens

--- a/src/modules/wallet/components/searchBarWallets/walletsAndValidators.css
+++ b/src/modules/wallet/components/searchBarWallets/walletsAndValidators.css
@@ -63,6 +63,7 @@
 
   & .tag {
     @mixin contentNormal bold;
+    white-space: nowrap;
 
     background: var(--color-white-smoke);
     color: var(--color-ink-blue);
